package customChar.springboot.restserver;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

/**
 * The Spring application.
 */
@SpringBootApplication
public class CustomCharModelApplication {

    public static void main(String[] args) {
        SpringApplication.run(CustomCharModelApplication.class, args);
    }
}
